# TinyFighter

./: .gitignore  README.md
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/: CMakeLists.txt
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/include/: Animation.h  AnimationData.h  Arena.h  CMakeLists.txt  Collision.h  Controller.h  GameObject.h  Menu.h  Network.h  ResourcesManager.h  RestartExc.h  StatesSection.h  Utillities.h  macros.h
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/include/Character/: Character.h  Enemy.h  ManaAndHealth.h  Player.h
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/include/Menu/: ChooseArena.h  ChooseCharacter.h  ChooseDifficulty.h  ChooseMode.h  Command.h  ConclusionWindow.h  EnemyChoice.h  Exit.h  GenericMenu.h  InstructionsWindow.h  Menu.h  PvsC.h  PvsP.h  PvsPOnline.h
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/include/MovingObject/: MovingObject.h
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/include/specialAttack/: DynamicAttack.h  SpecialAttack.h  StaticAttack.h
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/resources/: CMakeLists.txt
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/src/: Animation.cpp  AnimationData.cpp  Arena.cpp  CMakeLists.txt  Collision.cpp  Controller.cpp  GameObject.cpp  Menu.cpp  Network.cpp  ResourcesManager.cpp  RestartExc.cpp  StatesSection.cpp  Utillities.cpp  main.cpp
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/src/Character/: Character.cpp  Enemy.cpp  ManaAndHealth.cpp  Player.cpp
oop2_project_Alexander1_Yershov1_Anael2_Zateikin2/src/Menu/: ChooseArena.cpp  (+13 more)
(+10 files in other folders)
